5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1646_2449.log
== TEST (2019-04-09 01:06:35) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

x=(c*e-b*f)/(a*e-b*d)
y=(a*f-c*d)/(a*e-b*d)

if((x>=0)and(y>=0)):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 01:06:50) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

x=(c*e-b*f)/(a*e-b*d)
y=(a*f-c*d)/(a*e-b*d)

if((x>=0)and(y>=0)):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 01:07:48) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

x=(c*e-b*f)/(a*e-b*d)
y=(a*f-c*d)/(a*e-b*d)

if((x>=0)and(y>=0)):
	C=x
	C=y
else:
	C="nao tem solucao"
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 01:08:05) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

x=(c*e-b*f)/(a*e-b*d)
y=(a*f-c*d)/(a*e-b*d)

if((x>=0)and(y>=0)):
	C=x
	C=y
else:
	C="nao tem solucao"
print(C)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 01:10:14) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

x=(c*e-b*f)/(a*e-b*d)
y=(a*f-c*d)/(a*e-b*d)

if((x>=0)and(y>=0)):
	C=x,Y
	print(C)
else:
	C="nao tem solucao"

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 01:10:47) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

x=(c*e-b*f)/(a*e-b*d)
y=(a*f-c*d)/(a*e-b*d)

if((x>=0)and(y>=0)):
	C=x,y
	print(C)
else:
	C="Nao tem solucao"

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 01:12:26) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)
x=(c*e-b*f)/p
y=(a*f-c*d)/p

if(p>=0):
	C=x,y
else:
	C="Nao tem solucao"
print(C)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    x=(c*e-b*f)/p
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 01:12:53) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)
x=(c*e-b*f)/p
y=(a*f-c*d)/p

if(p>0):
	C=x,y
else:
	C="Nao tem solucao"
print(C)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    x=(c*e-b*f)/p
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 01:13:16) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)
x=(c*e-b*f)/p
y=(a*f-c*d)/p

if(p!=0):
	C=x
else:
	C="Nao tem solucao"
print(C)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    x=(c*e-b*f)/p
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 01:13:26) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)
x=(c*e-b*f)/p
y=(a*f-c*d)/p

if(p!=0):
	C=x,y
else:
	C="Nao tem solucao"
print(C)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    x=(c*e-b*f)/p
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 01:13:33) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)
x=(c*e-b*f)/p
y=(a*f-c*d)/p

if(p!=0):
	C=x,y
else:
	C="Nao tem solucao"
print(C)
-- EXECUTION TIME:
0.126504
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 9, in <module>
    x=(c*e-b*f)/p
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 01:14:26) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)
x=(c*e-b*f)/p
y=(a*f-c*d)/p

if(p!=0):
	C=X
	C=Y	
else:
	C="Nao tem solucao"
print(C)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    x=(c*e-b*f)/p
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 01:14:35) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)
x=(c*e-b*f)/p
y=(a*f-c*d)/p

if(p!=0):
	C=x
	C=y	
else:
	C="Nao tem solucao"
print(C)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    x=(c*e-b*f)/p
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 01:14:57) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)
x=(c*e-b*f)/p
y=(a*f-c*d)/p

if(p!=0):
	C=x
	C=y	
else:
	C="Nao tem solucao"
print(C)
-- EXECUTION TIME:
0.209747
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 9, in <module>
    x=(c*e-b*f)/p
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 01:15:13) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)
x=(c*e-b*f)/p
y=(a*f-c*d)/p

if(p!=0):
	B=x
	C=y	
else:
	C="Nao tem solucao"
print(B,C)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    x=(c*e-b*f)/p
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 01:15:18) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)
x=(c*e-b*f)/p
y=(a*f-c*d)/p

if(p!=0):
	B=x
	C=y	
else:
	C="Nao tem solucao"
print(B,C)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    x=(c*e-b*f)/p
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 01:15:25) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)
x=(c*e-b*f)/p
y=(a*f-c*d)/p

if(p!=0):
	B=x
	C=y	
else:
	C="Nao tem solucao"
print(B,C)
-- EXECUTION TIME:
0.126508
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 9, in <module>
    x=(c*e-b*f)/p
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 01:16:00) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)
x=(c*e-b*f)/p
y=(a*f-c*d)/p

if(p!=0):
	B=x
	C=y	
else:
	C="Nao tem solucao"
print(B,C)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    x=(c*e-b*f)/p
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 01:17:36) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)
x=(c*e-b*f)/p
y=(a*f-c*d)/p

if(p!=0):
	X=x
	Y=y	
else:
	Y="Nao tem solucao"
print(X,Y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    x=(c*e-b*f)/p
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 01:17:43) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)
x=(c*e-b*f)/p
y=(a*f-c*d)/p

if(p!=0):
	X=x
	Y=y	
else:
	Y="Nao tem solucao"
print(X,Y)
-- EXECUTION TIME:
0.204992
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 9, in <module>
    x=(c*e-b*f)/p
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 01:17:57) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)
x=(c*e-b*f)/p
y=(a*f-c*d)/p

if(p!=0):
	X=x
	Y=y	
else:
	Y="Nao tem solucao"
print(X,Y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    x=(c*e-b*f)/p
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 01:18:28) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)
x=(c*e-b*f)/str"p"
y=(a*f-c*d)/str"p"

if(p!=0):
	X=x
	Y=y	
else:
	Y="Nao tem solucao"
print(X,Y)
-- EXECUTION TIME:
0.155493
-- ERROR:
  File "/home/codebench/codes/1646/2449/main.py", line 9
    x=(c*e-b*f)/str"p"
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 01:18:29) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)
x=(c*e-b*f)/str"p"
y=(a*f-c*d)/str"p"

if(p!=0):
	X=x
	Y=y	
else:
	Y="Nao tem solucao"
print(X,Y)
-- ERROR:
File "XXXX", line 9
    x=(c*e-b*f)/str"p"
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 01:19:24) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)


if(p!=0):
	X=(a*f-c*d)/p
	Y=(c*e-b*f)/p
else:
	Y="Nao tem solucao"
print(X,Y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(X,Y)
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 01:20:25) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)


if(p!=0):
	X=(a*f-c*d)/p;(c*e-b*f)/p
	
else:
	X="Nao tem solucao"
print(X)
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 01:20:31) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)


if(p!=0):
	X=(a*f-c*d)/p;(c*e-b*f)/p
	
else:
	X="Nao tem solucao"
print(X)
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 01:20:45) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)


if(p!=0):
	X=(a*f-c*d)/p,(c*e-b*f)/p
	
else:
	X="Nao tem solucao"
print(X)
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 01:21:02) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)


if(p!=0):
	X=(a*f-c*d)/p,(c*e-b*f)/p
	
else:
	X="Nao tem solucao"
print(X)
-- EXECUTION TIME:
0.131985
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
(1.528301886792453, -0.22641509433962265)
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
(1.1618589743589745, -0.15705128205128205)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 01:21:55) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)

if(p!=0):
	X=(a*f-c*d)/p
	Y=(c*e-b*f)/p
	
else:
	X="Nao tem solucao"
print(X,Y)
-- EXECUTION TIME:
0.292303
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 16, in <module>
    print(X,Y)
NameError: name 'Y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 01:22:14) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)

if(p!=0):
	X=(a*f-c*d)/p
	Y=(c*e-b*f)/p
	C=X,Y
else:
	C="Nao tem solucao"
print(C)
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 01:22:17) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)

if(p!=0):
	X=(a*f-c*d)/p
	Y=(c*e-b*f)/p
	C=X,Y
else:
	C="Nao tem solucao"
print(C)
-- EXECUTION TIME:
0.130124
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
(1.528301886792453, -0.22641509433962265)
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
(1.1618589743589745, -0.15705128205128205)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 01:22:21) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)

if(p!=0):
	X=(a*f-c*d)/p
	Y=(c*e-b*f)/p
	C=X,Y
else:
	C="Nao tem solucao"
print(C)
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 01:22:32) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)

if(p!=0):
	X=(a*f-c*d)/p
	Y=(c*e-b*f)/p
	C=Y,X
else:
	C="Nao tem solucao"
print(C)
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 01:22:38) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)

if(p!=0):
	X=(a*f-c*d)/p
	Y=(c*e-b*f)/p
	C=Y,X
else:
	C="Nao tem solucao"
print(C)
-- EXECUTION TIME:
0.181723
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
(-0.22641509433962265, 1.528301886792453)
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
(-0.15705128205128205, 1.1618589743589745)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 01:23:08) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)

if(p!=0):
	X=(c*e-b*f)/p
	Y=(a*f-c*d)/p
	C=X,Y
else:
	C="Nao tem solucao"
print(C)
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 01:23:13) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)

if(p!=0):
	X=(c*e-b*f)/p
	Y=(a*f-c*d)/p
	C=X,Y
else:
	C="Nao tem solucao"
print(C)
-- EXECUTION TIME:
0.152459
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
(-0.22641509433962265, 1.528301886792453)
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
(-0.15705128205128205, 1.1618589743589745)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 01:23:40) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)

if(p!=0):
	X=(c*e-b*f)/p
	Y=(a*f-c*d)/p
	C=X," ",Y
else:
	C="Nao tem solucao"
print(C)
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 01:23:45) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)

if(p!=0):
	X=(c*e-b*f)/p
	Y=(a*f-c*d)/p
	C=X," ",Y
else:
	C="Nao tem solucao"
print(C)
-- EXECUTION TIME:
0.127352
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
(-0.22641509433962265, ' ', 1.528301886792453)
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
(-0.15705128205128205, ' ', 1.1618589743589745)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 01:24:04) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)

if(p!=0):
	X=(c*e-b*f)/p
	Y=(a*f-c*d)/p
	C=X+" "+Y
else:
	C="Nao tem solucao"
print(C)
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 01:25:19) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)

if(p!=0):
	X=(c*e-b*f)/p
	Y=(a*f-c*d)/p
else:
	C="Nao tem solucao"
print(X,Y,C)
-- EXECUTION TIME:
0.173995
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 15, in <module>
    print(X,Y,C)
NameError: name 'X' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 01:25:23) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)

if(p!=0):
	X=(c*e-b*f)/p
	Y=(a*f-c*d)/p
else:
	C="Nao tem solucao"
print(X,Y)
-- EXECUTION TIME:
0.19547
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 15, in <module>
    print(X,Y)
NameError: name 'X' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 01:25:25) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)

if(p!=0):
	X=(c*e-b*f)/p
	Y=(a*f-c*d)/p
else:
	X="Nao tem solucao"
print(X,Y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print(X,Y)
NameError: name 'Y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 01:25:27) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)

if(p!=0):
	X=(c*e-b*f)/p
	Y=(a*f-c*d)/p
else:
	X="Nao tem solucao"
print(X,Y)
-- EXECUTION TIME:
0.20696
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 15, in <module>
    print(X,Y)
NameError: name 'Y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 01:26:40) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)

if(p!=0):
	X=(c*e-b*f)/p
	Y=(a*f-c*d)/p
	C=X;Y
else:
	C="Nao tem solucao"
print(C)
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 01:26:55) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)

if(p!=0):
	X=(c*e-b*f)/p
	Y=(a*f-c*d)/p
	C=XY
else:
	C="Nao tem solucao"
print(C)
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 01:27:04) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)

if(p!=0):
	X=(c*e-b*f)/p
	Y=(a*f-c*d)/p
	C=X Y
else:
	C="Nao tem solucao"
print(C)
-- ERROR:
File "XXXX", line 13
    C=X Y
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 01:28:05) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)

if(p!=0):
	X=(c*e-b*f)/p
	C=X
elif:
	Y=(a*f-c*d)/p
	C=Y
else:
	C="Nao tem solucao"
print(C)
-- ERROR:
File "XXXX", line 13
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 01:28:17) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)

if(p!=0):
	X=(c*e-b*f)/p
	C=X
elif(p!=0):
	Y=(a*f-c*d)/p
	C=Y
else:
	C="Nao tem solucao"
print(C)
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 01:28:44) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)

if(p!=0):
	X=(c*e-b*f)/p
	C=X
	Y=(a*f-c*d)/p
	C=Y
else:
	C="Nao tem solucao"
print(C)
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 01:29:40) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)

if(p!=0):
	X=(c*e-b*f)/p
	Y=(a*f-c*d)/p
	C=X.Y
else:
	C="Nao tem solucao"
print(C)
-- EXECUTION TIME:
0.180306
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:

-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 01:29:43) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)

if(p!=0):
	X=(c*e-b*f)/p
	Y=(a*f-c*d)/p
	C=X,Y
else:
	C="Nao tem solucao"
print(C)
-- EXECUTION TIME:
0.138683
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
(-0.22641509433962265, 1.528301886792453)
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
(-0.15705128205128205, 1.1618589743589745)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 01:29:46) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)

if(p!=0):
	X=(c*e-b*f)/p
	Y=(a*f-c*d)/p
	C=X;Y
else:
	C="Nao tem solucao"
print(C)
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 01:29:47) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)

if(p!=0):
	X=(c*e-b*f)/p
	Y=(a*f-c*d)/p
	C=X;Y
else:
	C="Nao tem solucao"
print(C)
-- EXECUTION TIME:
0.132262
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:06:42) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)

if(p!=0):
	print(X)=(c*e-b*f)/p
	print(Y)=(a*f-c*d)/p
else:
	print("Nao tem solucao")

-- EXECUTION TIME:
0.134558
-- ERROR:
  File "/home/codebench/codes/1646/2449/main.py", line 11
    print(X)=(c*e-b*f)/p
    ^
SyntaxError: can't assign to function call

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:07:39) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)

if(p==0):
	print("Nao tem solucao")
	print(X)=(c*e-b*f)/p
	print(Y)=(a*f-c*d)/p
else:
	print(X)=(c*e-b*f)/p
	print(Y)=(a*f-c*d)/p

-- ERROR:
File "XXXX", line 12
    print(X)=(c*e-b*f)/p
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:08:33) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)

if(p==0):
	print("Nao tem solucao")
	
else:
	X=(c*e-b*f)/p
	Y=(a*f-c*d)/p
	print(X)
	print(Y)

-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:08:33) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)

if(p==0):
	print("Nao tem solucao")
	
else:
	X=(c*e-b*f)/p
	Y=(a*f-c*d)/p
	print(X)
	print(Y)

-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:08:53) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))
d=float(input("valor de d:"))
e=float(input("valor de e:"))
f=float(input("valor de f:"))

p=(a*e-b*d)

if(p==0):
	print("Nao tem solucao")
	
else:
	X=(c*e-b*f)/p
	Y=(a*f-c*d)/p
	print(X)
	print(Y)

-- EXECUTION TIME:
0.174414
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
